--- a/metadata.yaml
+++ b/metadata.yaml
@@ -56,6 +56,7 @@ subjects:
 - !lcsh 'Animals -- Fiction'
 - !lcc 'PR'
 - !lcsh 'Pastoral fiction'
+- GITenberg
 title: The Wind in the Willows
 url: http://www.gutenberg.org/ebooks/27805
 wikipedia:
